# eos-system-contracts

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  docs.json
.cicd/: defaults.json
.cspell/: custom-dictionary.txt  system-contracts-custom-dictionary.txt
.github/workflows/: build.yaml  label_new_issues.yaml  ubuntu-2004.yml
contracts/: CMakeLists.txt
contracts/eosio.bios/: CMakeLists.txt
contracts/eosio.bios/include/eosio.bios/: eosio.bios.hpp
contracts/eosio.bios/ricardian/: eosio.bios.ricardian.hpp.in
contracts/eosio.bios/src/: eosio.bios.cpp
contracts/eosio.bpay/: CMakeLists.txt
contracts/eosio.bpay/include/eosio.bpay/: eosio.bpay.hpp
contracts/eosio.bpay/include/eosio.system/: eosio.system.hpp
contracts/eosio.bpay/include/eosio.token/: eosio.token.hpp
contracts/eosio.bpay/ricardian/: eosio.bpay.contracts.md.in
contracts/eosio.bpay/src/: eosio.bpay.cpp
contracts/eosio.distrb/: CMakeLists.txt
contracts/eosio.distrb/include/eosio.distrb/: eosio.distrb.hpp
contracts/eosio.distrb/src/: eosio.distrb.cpp
contracts/eosio.distribute/: CMakeLists.txt
contracts/eosio.distribute/include/eosio.distribute/: eosio.distribute.hpp
contracts/eosio.distribute/src/: eosio.distribute.cpp
contracts/eosio.fees/: CMakeLists.txt
contracts/eosio.fees/include/eosio.fees/: eosio.fees.hpp
contracts/eosio.fees/src/: eosio.fees.cpp
contracts/eosio.msig/: CMakeLists.txt
contracts/eosio.msig/include/eosio.msig/: eosio.msig.hpp
contracts/eosio.msig/ricardian/: eosio.msig.ricardian.hpp.in
contracts/eosio.msig/src/: eosio.msig.cpp
contracts/eosio.saving/: CMakeLists.txt
contracts/eosio.saving/include/eosio.saving/: eosio.saving.hpp
contracts/eosio.saving/src/: eosio.saving.cpp
contracts/eosio.symbol/: CMakeLists.txt
contracts/eosio.symbol/include/: eosio.symbol.hpp
contracts/eosio.symbol/src/: eosio.symbol.cpp
contracts/eosio.system/: CMakeLists.txt
contracts/eosio.system/include/eosio.system/: block_info.hpp  canon_name.hpp  eosio.system.hpp  exchange_state.hpp  limit_auth_changes.hpp  native.hpp  peer_keys.hpp  powerup.results.hpp  rex.results.hpp
contracts/eosio.system/ricardian/: eosio.system.clauses.hpp.in  eosio.system.clauses.md  eosio.system.contracts.md.in  eosio.system.ricardian.hpp.in
contracts/eosio.system/src/: block_info.cpp  delegate_bandwidth.cpp  eosio.system.cpp  exchange_state.cpp  finalizer_key.cpp  limit_auth_changes.cpp  name_bidding.cpp  native.cpp  peer_keys.cpp  powerup.cpp  powerup.results.cpp  producer_pay.cpp  rex.cpp  rex.results.cpp  voting.cpp
contracts/eosio.token/: CMakeLists.txt
contracts/eosio.token/include/eosio.token/: eosio.token.hpp
contracts/eosio.token/ricardian/: eosio.token.contracts.md.in  eosio.token.ricardian.hpp.in
contracts/eosio.token/src/: eosio.token.cpp
contracts/eosio.wrap/: CMakeLists.txt
contracts/eosio.wrap/include/eosio.wrap/: eosio.wrap.hpp
contracts/eosio.wrap/ricardian/: eosio.wrap.ricardian.hpp.in
contracts/eosio.wrap/src/: eosio.wrap.cpp
contracts/test_contracts/: CMakeLists.txt
contracts/test_contracts/blockinfo_tester/: CMakeLists.txt
contracts/test_contracts/blockinfo_tester/include/blockinfo_tester/: blockinfo_tester.hpp
contracts/test_contracts/blockinfo_tester/src/: blockinfo_tester.cpp
contracts/test_contracts/sendinline/: CMakeLists.txt
docs/: 03_build-and-deploy.md  index.md
docs/01_key-concepts/: 01_system.md  02_ram.md  02_system_resources.md  03_cpu.md  04_net.md  05_ram.md  05_stake.md  05_system_resource_allocation.md  06_vote.md  07_powerup_model.md
docs/04_guides/: 01_upgrading-the-eosio.system-contract.md  02_how-to-buy-ram.md  03_how-to-stake.md  04_how-to-vote.md  05_how-to-create-issue-and-transfer-a-token.md  06_how-to-sign-a-multisig-transaction-with-eosio.msig.md  07_how-to-use-eosio.wrap.md  08_configure-use-powerup-resource-model.md  08_how-to-configure-the-powerup-resource-model.md  08_how-to-configure-use-powerup-resource-model.md  09_build-configure-use-eosio.distribute.md
tests/: CMakeLists.txt  contracts.hpp.in  eosio.bios_inst_fin_tests.cpp  eosio.bpay_tests.cpp  eosio.distribute_tests.cpp  eosio.fees_tests.cpp  eosio.finalizer_key_tests.cpp  eosio.limitauth_tests.cpp  eosio.msig_tests.cpp  eosio.peer_keys_tests.cpp  eosio.powerup_tests.cpp  eosio.symbol_tests.cpp  eosio.symbol_tests.cpp.txt  eosio.system_blockinfo_tests.cpp  eosio.system_ram_tests.cpp  eosio.system_rex_matured_tests.cpp  eosio.system_schedules_tests.cpp  eosio.system_tester.hpp  eosio.system_tests.cpp  eosio.token_tests.cpp  eosio.wrap_tests.cpp  main.cpp  scripted-tests.sh
tests/test_contracts/old_versions/v1.8.3/eosio.system/: eosio.system.abi
tests/test_contracts/sendinline/: CMakeLists.txt
